--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "bcrypt": "^3.0.2",
         "body-parser": "^1.19.0",
         "express": "^4.16.4",
-        "nodemon": "^1.18.11"
+        "mongoose": "^5.5.4",
+        "mongoose-unique-validator": "^2.0.3",
+        "nodemon": "^1.18.11",
+        "underscore": "^1.9.1"
     }
 }
